--- a/wsgi/.htaccess
+++ b/wsgi/.htaccess
@@ -1,2 +1,2 @@
-RewriteEngine On
-RewriteRule ^application/static/(.+)$ /downtown/static/$1 [L]
+RewriteEngine on 
+RewriteRule ^application/media/(.+)$ /downtown/static/$1 [L]
